# machine-learning-zoomcamp-2025-projects-capstone2

./: Dockerfile  LICENSE  README.md  predict.py  prepared-stroke-prediction-dataset.parquet  pyproject.toml  run-docker.sh  submission.ipynb  train.py
